--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,17 +1,6 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-section[epub|type~="dedication"]{
-	text-align: center;
-}
-
-section[epub|type~="dedication"] > *{
-	display: inline-block;
-	margin: auto;
-	margin-top: 3em;
-	max-width: 80%;
-}
-
 [epub|type~="z3998:salutation"] + p{
 	text-indent: 0;
 }
@@ -20,6 +9,18 @@ section[epub|type~="dedication"] > *{
 [epub|type~="z3998:salutation"],
 [epub|type~="z3998:signature"]{
 	font-variant: small-caps;
+}
+
+section[epub|type~="dedication"]{
+	font-variant: small-caps;
+	text-align: center;
+}
+
+section[epub|type~="dedication"] > *{
+	display: inline-block;
+	margin: auto;
+	margin-top: 3em;
+	max-width: 80%;
 }
 
 @supports(display: flex){
